--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 
       <div class="w3-container">
         <ul id="messages"></ul>
+        <div id="feedback"></div>
         <form action="" id="text">
           <input id="m" autocomplete="off" /><button>Send</button>
       </form>
       </div>
-      
+
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.1.js"></script>
@@ -59,8 +60,17 @@
           return false;
         });
         socket.on('chat message', function(msg){
+            feedback.innerHTML = '';
           $('#messages').append($('<li>').html(msg));
           window.scrollTo(0, document.body.scrollHeight);
+        });
+
+        m.addEventListener('keypress', function(){
+            socket.emit('typing', name);
+        })
+
+        socket.on('typing', function(data){
+            feedback.innerHTML = '<p><em>' + data + ' is typing a message...</em></p>';
         });
         var dialog = $( "#dialog" ).dialog({
           autoOpen: true,
