User is typing a message pop up1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
       #messages { margin-bottom: 40px }
+      #feedback p{color: #aaa; padding: 14px 0px; margin: 0 20px; }
     </style>
   </head>
   <body>
